fix custom radio wrapping

--- a/app/frontend/stylesheets/local/site_wide.scss
+++ b/app/frontend/stylesheets/local/site_wide.scss
@@ -14,6 +14,12 @@ body {
   @extend .mb-3;
 }
 
+// work around for some weirdness in bootstrap where float:left radio/check
+// comes right after float:left legend...
+.form-check {
+  clear: both;
+}
+
 
 // fade on color change on hover, matches style on www.sciencehistory.org.
 a {
